# UCF_TA2_AC

./: .gitignore  PlayerModel.py  PlayerProfiler_Draft.py  PlayerProfiler_Test_1.py  README.md  agent.cmd  dockerfile  metadata_utils.py  qid.metadata  requirements.txt  run_locally.sh  settings.env  settings_complex.env  w.out  w2.out  with_file_metadata.py  x.out  x2.out  y.out  y2.out  z.out  z2.out
ConfigFolder/: config.json
docs/: notes.md
ihmc-python-agent-helper-package/: setup.cfg
ihmc-python-agent-helper-package/src/asistagenthelper/: ASISTAgentHelper.py  RawConnection.py
rubrics/: no-survey.txt  team-89-combined.txt  test-a-thon-3-24.txt
src/: PlayerModel.py  PlayerModelDynamic.py  PlayerProfilerAgent.py  PlayerProfiler_Draft.py  UCF_Externalization_AC_Draft.py  metadata_utils.py  ucf-release-to-aptima.py  with_file_metadata.py
testbed_ac/: README.md  agent.cmd  agent.sh  docker-compose.launcher.yml  docker-compose.yml  dockerfile  requirements.txt  run_locally.cmd  settings.env  settings_simple.env
testbed_ac/ConfigFolder/: config.json  extraInfo.json
testbed_ac/ihmc-python-agent-helper-package/: LICENSE  README.md  setup.cfg
testbed_ac/ihmc-python-agent-helper-package/src/asistagenthelper/: ASISTAgentHelper.py  RawConnection.py  __init__.py
testbed_ac/src/: MoreComplexAgent.py  PlayerProfilerAgent.py  SimpleAgent.py  entrypoint.sh
