[metadata]
name = asistagenthelper-pkg-rcarff_ihmc
version = 0.1.4
author = Roger Carff
author_email = rcarff@ihmc.org
description = ASIST Agent Helper from IHMC
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt>=1.5.1
    requests>=2.26.0
    python-dateutil

[options.packages.find]
where = src
